some new puppet stuff

--- a/support/puppet/install
+++ b/support/puppet/install
@@ -5,6 +5,13 @@ RELEASE=$(lsb_release -c|sed 's/.*:\t//g')
 cd /root
 wget "http://apt.puppetlabs.com/puppetlabs-release-$RELEASE.deb"
 dpkg -i "puppetlabs-release-$RELEASE.deb"
+rm -f "puppetlabs-release-$RELEASE.deb"
 apt-get update && apt-get install -y puppet
 apt-get install -y make ruby1.9.1 ruby1.9.1-dev
 gem install librarian-puppet
+
+ln -s /root/.server-bootstrap/support/puppet/library/Puppetfile /etc/puppet
+ln -s /root/.server-bootstrap/support/puppet/library/Puppetfile.lock /etc/puppet
+
+cd /etc/puppet
+librarian-puppet install
