--- a/support/puppet/install
+++ b/support/puppet/install
@@ -12,7 +12,8 @@ gem install librarian-puppet
 
 ln -s /root/.server-bootstrap/support/puppet/library/Puppetfile /etc/puppet
 ln -s /root/.server-bootstrap/support/puppet/library/Puppetfile.lock /etc/puppet
-ln -s /root/.server-bootstrap/support/puppet/bitrithm /etc/puppet/modules/bitrithm
+ln -s /root/.server-bootstrap/support/puppet/bitrithm /etc/puppet/modules
+rm -f /etc/puppet/manifests && ln -s /root/.server-bootstrap/support/puppet/site.pp /etc/puppet
 
 cd /etc/puppet
 librarian-puppet install
