--- a/support/puppet/install
+++ b/support/puppet/install
@@ -14,7 +14,7 @@ ln -s /root/.server-bootstrap/support/puppet/library/Puppetfile /etc/puppet
 ln -s /root/.server-bootstrap/support/puppet/library/Puppetfile.lock /etc/puppet
 rm -rf /etc/puppet/manifests && ln -s /root/.server-bootstrap/support/puppet/manifests /etc/puppet
 
-ls -s /root/.server-bootstrap/support/puppet/hiera.yaml /etc/puppet
+ln -s /root/.server-bootstrap/support/puppet/hiera.yaml /etc/puppet
 ln -s /root/.server-bootstrap/support/puppet/data /etc/puppet
 
 cd /etc/puppet
